[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Coloured_Button.gd" type="Script" id=1]

[node name="Coloured_Button" type="Node2D" groups=[
"Arts",
]]
script = ExtResource( 1 )

[node name="Title_Colour" type="ColorRect" parent="."]
margin_left = 20.0
margin_right = 80.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 20 )
color = Color( 0.215686, 0.215686, 0.215686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Button" parent="."]
margin_left = 20.0
margin_right = 29.0
margin_bottom = 20.0
text = "A"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" type="Button" parent="."]
margin_left = 40.0
margin_right = 60.0
margin_bottom = 20.0
text = ">"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="."]
margin_left = 60.0
margin_right = 80.0
margin_bottom = 20.0
text = "X"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
visible = false
margin_top = 20.0
margin_right = 80.0
margin_bottom = 40.0
show_line_numbers = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shrink_Stretch" type="Button" parent="."]
margin_top = 60.0
margin_right = 69.0
margin_bottom = 80.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shrink_Pull" type="Button" parent="."]
margin_left = 80.0
margin_top = 23.23
margin_right = 100.0
margin_bottom = 83.23
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
margin_right = 40.0001
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
text = "C"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Title" to="." method="_on_Title_pressed"]
[connection signal="button_down" from="Move" to="." method="_on_Move_button_down"]
[connection signal="button_up" from="Move" to="." method="_on_Move_button_up"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="button_down" from="Shrink_Stretch" to="." method="_on_Shrink_Stretch_button_down"]
[connection signal="button_up" from="Shrink_Stretch" to="." method="_on_Shrink_Stretch_button_up"]
[connection signal="button_down" from="Shrink_Pull" to="." method="_on_Shrink_Pull_button_down"]
[connection signal="button_up" from="Shrink_Pull" to="." method="_on_Shrink_Pull_button_up"]
[connection signal="color_changed" from="ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
